application-workloads/implement-secure-hybrid-network/modules/networking.bicep
param adminUserName string = 'azureadmin'

@secure()
param adminPassword string

@description('The count of Windows virtual machines to create.')
param windowsVMCount int = 2
param vmSize string = 'Standard_A1_v2'
param configureSitetosite bool = true
param hubNetwork object = {
  name: 'vnet-hub'
  addressPrefix: '10.0.0.0/20'
}
param spokeNetwork object = {
  name: 'vnet-spoke'
  addressPrefix: '10.100.0.0/16'
  subnetName: 'snet-spoke-resources'
  subnetPrefix: '10.100.0.0/16'
  subnetNsgName: 'nsg-spoke-resources'
}
param vpnGateway object = {
  name: 'vpn-azure-network'
  subnetName: 'GatewaySubnet'
  subnetPrefix: '10.0.2.0/27'
  publicIPAddressName: 'pip-vgn-gateway'
}
param bastionHost object = {
  name: 'AzureBastionHost'
  subnetName: 'AzureBastionSubnet'
  subnetPrefix: '10.0.1.0/29'
  publicIPAddressName: 'pip-bastion'
  nsgName: 'nsg-hub-bastion'
}
param azureFirewall object = {
  name: 'AzureFirewall'
  subnetName: 'AzureFirewallSubnet'
  subnetPrefix: '10.0.3.0/26'
  publicIPAddressName: 'pip-firewall'
}
param spokeRoutes object = {
  tableName: 'spoke-routes'
  routeNameFirewall: 'spoke-to-firewall'
}
param gatewayRoutes object = {
  tableName: 'gateway-routes'
  routeNameFirewall: 'gateway-to-firewall'
}
param internalLoadBalancer object = {
  name: 'lb-internal'
  backendName: 'lb-backend'
  fontendName: 'lb-frontend'
  probeName: 'lb-probe'
}
param location string

var logAnalyticsWorkspaceName = 'la-${uniqueString(subscription().subscriptionId,resourceGroup().id)}'
var peering_name_hub_to_spoke = 'hub-to-spoke'
var peering_name_spoke_to_hub = 'spoke-to-hub'
var nicNameWebVar = 'nic-web-server'
var vmNameWebVar = 'vm-web-server'
var windowsOSVersion = '2012-R2-Datacenter'

resource logAnalyticsWorkspace 'Microsoft.OperationalInsights/workspaces@2025-07-01' = {
  name: logAnalyticsWorkspaceName
  location: location
  properties: {
    sku: {
      name: 'PerGB2018'
    }
    features: {
      searchVersion: 1
    }
  }
}

resource hubVnet 'Microsoft.Network/virtualNetworks@2025-05-01' = {
  name: hubNetwork.name
  location: location
  properties: {
    addressSpace: {
      addressPrefixes: [hubNetwork.addressPrefix]
    }
    subnets: [
      {
        name: vpnGateway.subnetName
        properties: {
          addressPrefix: vpnGateway.subnetPrefix
          routeTable: {
            id: gatewayRoutes_table.id
          }
        }
      }
      {
        name: azureFirewall.subnetName
        properties: {
          addressPrefix: azureFirewall.subnetPrefix
        }
      }
      {
        name: bastionHost.subnetName
        properties: {
          addressPrefix: bastionHost.subnetPrefix
          networkSecurityGroup: {
            id: bastionNsg.id
          }
        }
      }
    ]
  }
}

resource hubVnetDiagnosticSettings 'Microsoft.Network/virtualNetworks/providers/diagnosticSettings@2017-05-01-preview' = {
  name: '${hubNetwork.name}/Microsoft.Insights/default${logAnalyticsWorkspaceName}'
  properties: {
    workspaceId: logAnalyticsWorkspace.id
    logs: [
      {
        category: 'VMProtectionAlerts'
        enabled: true
      }
    ]
    metrics: [
      {
        category: 'AllMetrics'
        enabled: true
      }
    ]
  }
  dependsOn: [hubVnet]
}

resource spokeVnet 'Microsoft.Network/virtualNetworks@2025-05-01' = {
  name: spokeNetwork.name
  location: location
  properties: {
    addressSpace: {
      addressPrefixes: [spokeNetwork.addressPrefix]
    }
    subnets: [
      {
        name: spokeNetwork.subnetName
        properties: {
          addressPrefix: spokeNetwork.addressPrefix
          networkSecurityGroup: {
            id: spokeVnetNsg.id
          }
          routeTable: {
            id: spokeRoutes_table.id
          }
        }
      }
    ]
  }
}

resource spokeVnetDiagnosticSettings 'Microsoft.Network/virtualNetworks/providers/diagnosticSettings@2017-05-01-preview' = {
  name: '${spokeNetwork.name}/Microsoft.Insights/default${logAnalyticsWorkspaceName}'
  properties: {
    workspaceId: logAnalyticsWorkspace.id
    logs: [
      {
        category: 'VMProtectionAlerts'
        enabled: true
      }
    ]
    metrics: [
      {
        category: 'AllMetrics'
        enabled: true
      }
    ]
  }
  dependsOn: [spokeVnet]
}

resource hubVnetPeeringToSpokeVnet 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings@2025-05-01' = {
  name: '${hubNetwork.name}/${peering_name_hub_to_spoke}'
  location: location
  properties: {
    allowVirtualNetworkAccess: true
    allowForwardedTraffic: true
    allowGatewayTransit: true
    useRemoteGateways: false
    remoteVirtualNetwork: {
      id: spokeVnet.id
    }
  }
  dependsOn: [
    hubVnet

    vpngGtwy
  ]
}

resource spokeVnetPeeringToHubVnet 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings@2025-05-01' = {
  name: '${spokeNetwork.name}/${peering_name_spoke_to_hub}'
  location: location
  properties: {
    allowVirtualNetworkAccess: true
    allowForwardedTraffic: true
    allowGatewayTransit: false
    useRemoteGateways: true
    remoteVirtualNetwork: {
      id: hubVnet.id
    }
  }
  dependsOn: [spokeVnet, vpngGtwy]
}

resource bastionPublicIp 'Microsoft.Network/publicIpAddresses@2025-05-01' = {
  name: bastionHost.publicIPAddressName
  location: location
  sku: {
    name: 'Standard'
  }
  properties: {
    publicIPAllocationMethod: 'Static'
  }
}

resource bastionNsg 'Microsoft.Network/networkSecurityGroups@2025-05-01' = {
  name: bastionHost.nsgName
  location: location
  properties: {
    securityRules: [
      {
        name: 'bastion-in-allow'
        properties: {
          protocol: 'Tcp'
          sourcePortRange: '*'
          sourceAddressPrefix: 'Internet'
          destinationPortRange: '443'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 100
          direction: 'Inbound'
        }
      }
      {
        name: 'bastion-control-in-allow'
        properties: {
          protocol: 'Tcp'
          sourcePortRange: '*'
          sourceAddressPrefix: 'GatewayManager'
          destinationPortRange: '443'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 120
          direction: 'Inbound'
        }
      }
      {
        name: 'bastion-in-host'
        properties: {
          protocol: '*'
          sourcePortRange: '*'
          destinationPortRanges: ['8080', '5701']
          sourceAddressPrefix: 'VirtualNetwork'
          destinationAddressPrefix: 'VirtualNetwork'
          access: 'Allow'
          priority: 130
          direction: 'Inbound'
        }
      }
      {
        name: 'bastion-vnet-out-allow'
        properties: {
          protocol: 'Tcp'
          sourcePortRange: '*'
          sourceAddressPrefix: '*'
          destinationPortRanges: ['22', '3389']
          destinationAddressPrefix: 'VirtualNetwork'
          access: 'Allow'
          priority: 100
          direction: 'Outbound'
        }
      }
      {
        name: 'bastion-azure-out-allow'
        properties: {
          protocol: 'Tcp'
          sourcePortRange: '*'
          sourceAddressPrefix: '*'
          destinationPortRange: '443'
          destinationAddressPrefix: 'AzureCloud'
          access: 'Allow'
          priority: 120
          direction: 'Outbound'
        }
      }
      {
        name: 'bastion-out-host'
        properties: {
          protocol: '*'
          sourcePortRange: '*'
          destinationPortRanges: ['8080', '5701']
          sourceAddressPrefix: 'VirtualNetwork'
          destinationAddressPrefix: 'VirtualNetwork'
          access: 'Allow'
          priority: 130
          direction: 'Outbound'
        }
      }
      {
        name: 'bastion-out-deny'
        properties: {
          protocol: '*'
          sourcePortRange: '*'
          destinationPortRange: '*'
          sourceAddressPrefix: '*'
          destinationAddressPrefix: '*'
          access: 'Deny'
          priority: 1000
          direction: 'Outbound'
        }
      }
    ]
  }
}

resource bastionNsgDiagnosticSettings 'Microsoft.Network/networkSecurityGroups/providers/diagnosticSettings@2017-05-01-preview' = {
  name: '${bastionHost.nsgName}/Microsoft.Insights/default${logAnalyticsWorkspaceName}'
  properties: {
    workspaceId: logAnalyticsWorkspace.id
    logs: [
      {
        category: 'NetworkSecurityGroupEvent'
        enabled: true
      }
      {
        category: 'NetworkSecurityGroupRuleCounter'
        enabled: true
      }
    ]
  }
  dependsOn: [bastionNsg]
}

resource bastionHostName 'Microsoft.Network/bastionHosts@2025-05-01' = {
  name: bastionHost.name
  location: location
  properties: {
    ipConfigurations: [
      {
        name: 'IpConf'
        properties: {
          subnet: {
            id: resourceId(
              'Microsoft.Network/virtualNetworks/subnets',
              hubNetwork.name,
              bastionHost.subnetName
            )
          }
          publicIPAddress: {
            id: bastionPublicIp.id
          }
        }
      }
    ]
  }
  dependsOn: [hubVnet]
}

resource bastionHostDiagnosticSettings 'Microsoft.Network/bastionHosts/providers/diagnosticSettings@2017-05-01-preview' = {
  name: '${bastionHost.name}/Microsoft.Insights/default${logAnalyticsWorkspaceName}'
  properties: {
    workspaceId: logAnalyticsWorkspace.id
    logs: [
      {
        category: 'BastionAuditLogs'
        enabled: true
      }
    ]
  }
  dependsOn: [bastionHostName]
}

resource vpnGtwyPublicIp 'Microsoft.Network/publicIPAddresses@2025-05-01' =
  if (configureSitetosite) {
    name: vpnGateway.publicIPAddressName
    location: location
    properties: {
      publicIPAllocationMethod: 'Dynamic'
    }
  }

resource vpngGtwy 'Microsoft.Network/virtualNetworkGateways@2025-05-01' =
  if (configureSitetosite) {
    name: vpnGateway.name
    location: location
    properties: {
      ipConfigurations: [
        {
          properties: {
            privateIPAllocationMethod: 'Dynamic'
            subnet: {
              id: resourceId(
                'Microsoft.Network/virtualNetworks/subnets',
                hubNetwork.name,
                vpnGateway.subnetName
              )
            }
            publicIPAddress: {
              id: vpnGtwyPublicIp.id
            }
          }
          name: 'vnetGatewayConfig'
        }
      ]
      sku: {
        name: 'VpnGw2'
        tier: 'VpnGw2'
      }
      gatewayType: 'Vpn'
      vpnType: 'RouteBased'
      enableBgp: false
      bgpSettings: {
        asn: 60001
      }
    }
    dependsOn: [hubVnet]
  }

resource vpnGtwyDiagnosticSettings 'Microsoft.Network/virtualNetworkGateways/providers/diagnosticSettings@2017-05-01-preview' =
  if (configureSitetosite) {
    name: '${vpnGateway.name}/Microsoft.Insights/default${logAnalyticsWorkspaceName}'
    properties: {
      workspaceId: logAnalyticsWorkspace.id
      logs: [
        {
          category: 'GatewayDiagnosticLog'
          enabled: true
        }
        {
          category: 'TunnelDiagnosticLog'
          enabled: true
        }
        {
          category: 'RouteDiagnosticLog'
          enabled: true
        }
        {
          category: 'IKEDiagnosticLog'
          enabled: true
        }
        {
          category: 'P2SDiagnosticLog'
          enabled: true
        }
      ]
    }
    dependsOn: [vpngGtwy]
  }

resource azFirewallPublicIp 'Microsoft.Network/publicIPAddresses@2025-05-01' = {
  name: azureFirewall.publicIPAddressName
  location: location
  sku: {
    name: 'Standard'
  }
  properties: {
    publicIPAllocationMethod: 'Static'
  }
}

resource azFirewall 'Microsoft.Network/azureFirewalls@2025-05-01' = {
  name: azureFirewall.name
  location: location
  properties: {
    sku: {
      name: 'AZFW_VNet'
      tier: 'Standard'
    }
    threatIntelMode: 'Alert'
    ipConfigurations: [
      {
        name: azureFirewall.name
        properties: {
          publicIPAddress: {
            id: azFirewallPublicIp.id
          }
          subnet: {
            id: resourceId(
              'Microsoft.Network/virtualNetworks/subnets',
              hubNetwork.name,
              azureFirewall.subnetName
            )
          }
        }
      }
    ]
    applicationRuleCollections: [
      {
        name: 'spoke-outbound'
        properties: {
          priority: 100
          action: {
            type: 'Allow'
          }
          rules: [
            {
              name: 'all-internet'
              protocols: [
                {
                  protocolType: 'Http'
                  port: 80
                }
                {
                  protocolType: 'Https'
                  port: 443
                }
              ]
              targetFqdns: ['*']
              sourceAddresses: ['*']
            }
          ]
        }
      }
    ]
  }
  dependsOn: [hubVnet]
}

resource azFirewallDiagnosticSettings 'Microsoft.Network/azureFirewalls/providers/diagnosticSettings@2017-05-01-preview' = {
  name: '${azureFirewall.name}/Microsoft.Insights/default${logAnalyticsWorkspaceName}'
  properties: {
    workspaceId: logAnalyticsWorkspace.id
    logs: [
      {
        category: 'AzureFirewallApplicationRule'
        enabled: true
      }
      {
        category: 'AzureFirewallNetworkRule'
        enabled: true
      }
      {
        category: 'AzureFirewallDnsProxy'
        enabled: true
      }
    ]
  }
  dependsOn: [azFirewall]
}

resource spokeVnetNsg 'Microsoft.Network/networkSecurityGroups@2025-05-01' = {
  name: spokeNetwork.subnetNsgName
  location: location
  properties: {
    securityRules: [
      {
        name: 'allow-http-traffic-from-external'
        properties: {
          protocol: '*'
          sourcePortRange: '*'
          destinationPortRange: '80'
          sourceAddressPrefix: '*'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 100
          direction: 'Inbound'
        }
      }
      {
        name: 'allow-http-traffic-from-vnet'
        properties: {
          protocol: '*'
          sourcePortRange: '*'
          destinationPortRange: '80'
          sourceAddressPrefix: '10.0.0.0/16'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 110
          direction: 'Inbound'
        }
      }
    ]
  }
}

resource spokeVnetNsgDiagnosticSettings 'Microsoft.Network/networkSecurityGroups/providers/diagnosticSettings@2017-05-01-preview' = {
  name: '${spokeNetwork.subnetNsgName}/Microsoft.Insights/default${logAnalyticsWorkspaceName}'
  properties: {
    workspaceId: logAnalyticsWorkspace.id
    logs: [
      {
        category: 'NetworkSecurityGroupEvent'
        enabled: true
      }
      {
        category: 'NetworkSecurityGroupRuleCounter'
        enabled: true
      }
    ]
  }
  dependsOn: [spokeVnetNsg]
}

resource nicNameWeb 'Microsoft.Network/networkInterfaces@2025-05-01' = [
  for i in range(0, windowsVMCount): {
    name: '${nicNameWebVar}${i}'
    location: location
    properties: {
      ipConfigurations: [
        {
          name: 'ipconfig'
          properties: {
            privateIPAllocationMethod: 'Dynamic'
            subnet: {
              id: resourceId(
                'Microsoft.Network/virtualNetworks/subnets',
                spokeNetwork.name,
                spokeNetwork.subnetName
              )
            }
            loadBalancerBackendAddressPools: [
              {
                id: resourceId(
                  'Microsoft.Network/loadBalancers/backendAddressPools',
                  internalLoadBalancer.name,
                  internalLoadBalancer.backendName
                )
              }
            ]
          }
        }
      ]
    }
    dependsOn: [spokeVnet, ilb]
  }
]

resource vmNameWeb 'Microsoft.Compute/virtualMachines@2025-04-01' = [
  for i in range(0, windowsVMCount): {
    name: '${vmNameWebVar}${i}'
    location: location
    properties: {
      hardwareProfile: {
        vmSize: vmSize
      }
      osProfile: {
        computerName: '${vmNameWebVar}${i}'
        adminUsername: adminUserName
        adminPassword: adminPassword
      }
      storageProfile: {
        imageReference: {
          publisher: 'MicrosoftWindowsServer'
          offer: 'WindowsServer'
          sku: windowsOSVersion
          version: 'latest'
        }
        osDisk: {
          createOption: 'FromImage'
        }
      }
      networkProfile: {
        networkInterfaces: [
          {
            id: resourceId(
              'Microsoft.Network/networkInterfaces',
              '${nicNameWebVar}${i}'
            )
          }
        ]
      }
    }
    dependsOn: [
      nicNameWeb
    ]
  }
]

resource vmNameWeb_installIIS 'Microsoft.Compute/virtualMachines/extensions@2025-04-01' = [
  for i in range(0, windowsVMCount): {
    name: '${vmNameWebVar}${i}/installIIS'
    location: location
    properties: {
      publisher: 'Microsoft.Compute'
      type: 'CustomScriptExtension'
      typeHandlerVersion: '1.7'
      autoUpgradeMinorVersion: true
      settings: {
        commandToExecute: 'powershell.exe Install-WindowsFeature -name Web-Server -IncludeManagementTools'
      }
    }
    dependsOn: [
      vmNameWeb
    ]
  }
]

resource spokeRoutes_table 'Microsoft.Network/routeTables@2025-05-01' = {
  name: spokeRoutes.tableName
  location: location
  properties: {
    disableBgpRoutePropagation: false
  }
}

resource spokeRoutes_tableName_spokeRoutes_routeNameFirewall 'Microsoft.Network/routeTables/routes@2025-05-01' = {
  parent: spokeRoutes_table
  name: '${spokeRoutes.routeNameFirewall}'
  properties: {
    addressPrefix: '0.0.0.0/0'
    nextHopType: 'VirtualAppliance'
    nextHopIpAddress: azFirewall.properties.ipConfigurations[0].properties.privateIPAddress
  }
  dependsOn: [spokeRoutes_table]
}

resource gatewayRoutes_table 'Microsoft.Network/routeTables@2025-05-01' = {
  name: gatewayRoutes.tableName
  location: location
  properties: {
    disableBgpRoutePropagation: false
  }
}

resource gatewayRoutes_tableName_gatewayRoutes_routeNameFirewall 'Microsoft.Network/routeTables/routes@2025-05-01' = {
  parent: gatewayRoutes_table
  name: '${gatewayRoutes.routeNameFirewall}'
  properties: {
    addressPrefix: spokeNetwork.addressPrefix
    nextHopType: 'VirtualAppliance'
    nextHopIpAddress: azFirewall.properties.ipConfigurations[0].properties.privateIPAddress
  }
  dependsOn: [gatewayRoutes_table]
}

resource ilb 'Microsoft.Network/loadBalancers@2025-05-01' = {
  name: internalLoadBalancer.name
  location: location
  sku: {
    name: 'Standard'
  }
  properties: {
    frontendIPConfigurations: [
      {
        name: internalLoadBalancer.fontendName
        properties: {
          subnet: {
            id: resourceId(
              'Microsoft.Network/virtualNetworks/subnets',
              spokeNetwork.name,
              spokeNetwork.subnetName
            )
          }
          privateIPAllocationMethod: 'Dynamic'
        }
      }
    ]
    backendAddressPools: [
      {
        name: internalLoadBalancer.backendName
      }
    ]
    loadBalancingRules: [
      {
        name: internalLoadBalancer.probeName
        properties: {
          frontendIPConfiguration: {
            id: resourceId(
              'Microsoft.Network/loadBalancers/frontendIPConfigurations',
              internalLoadBalancer.name,
              internalLoadBalancer.fontendName
            )
          }
          frontendPort: 80
          backendPort: 80
          enableFloatingIP: false
          idleTimeoutInMinutes: 4
          protocol: 'Tcp'
          enableTcpReset: false
          loadDistribution: 'Default'
          disableOutboundSnat: false
          backendAddressPool: {
            id: resourceId(
              'Microsoft.Network/loadBalancers/backendAddressPools',
              internalLoadBalancer.name,
              internalLoadBalancer.backendName
            )
          }
          probe: {
            id: '${resourceId('Microsoft.Network/loadBalancers',internalLoadBalancer.name)}/probes/${internalLoadBalancer.probeName}'
          }
        }
      }
    ]
    probes: [
      {
        name: internalLoadBalancer.probeName
        properties: {
          protocol: 'Http'
          port: 80
          requestPath: '/'
          intervalInSeconds: 15
          numberOfProbes: 2
        }
      }
    ]
  }
  dependsOn: [spokeVnet]
}

resource ilbDiagnosticSettings 'Microsoft.Network/loadBalancers/providers/diagnosticSettings@2017-05-01-preview' = {
  name: '${internalLoadBalancer.name}/Microsoft.Insights/default${logAnalyticsWorkspaceName}'
  properties: {
    workspaceId: logAnalyticsWorkspace.id
    metrics: [
      {
        category: 'AllMetrics'
        enabled: true
      }
    ]
  }
  dependsOn: [ilb]
}

output vpnIp string = vpngGtwy.properties.bgpSettings.bgpPeeringAddresses[0].tunnelIpAddresses[0]
output mocOnpremNetwork string = hubNetwork.addressPrefix
output spokeNetworkAddressPrefix string = spokeNetwork.addressPrefix
output azureGatewayName string = vpnGateway.name
